tests/rosetta/transpiler/Kotlin/animation.error
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/rosetta/transpiler/Kotlin/animation.kt:44:54: error: unresolved reference: add
                line = line + msg.substring(idx, idx.add(1.toBigInteger()))
                                                     ^
